A little more work, hoping to finish Sunday or Monday

--- a/docs/phen_framing.Rnw
+++ b/docs/phen_framing.Rnw
@@ -173,6 +173,7 @@ gs.sig.pop.h<-round(pop_sigma_gs[1,3],2)
 % Fix: Stuff about FALL events -- SHORTEN and MOVE up 
 % Fix: the last section ... (Ecological and forecasting implications)
 % Sneak a few methods into the pre-results paragraph -- community of species (all co-occur), how many spp (and delete from methods)
+% Fix the % FIX ME paragraph
 % Somewhere we need to say we did not have all the species we hoped too and we need more late-leafout species!
 % Me: Check notes from hand-written copy
 % Dan and me: Make sure we say higher/lower thermal seasons throughout... 
@@ -221,39 +222,45 @@ Across three years, our multi-population and multi-species common garden capture
 with earlier leafout leading to longer calendar growing seasons (Fig: \ref{fig:thermcal}a,b), as routinely seen with anthropogenic climate change \citep{Menzel1999,Liu2010}. However, longer calendar growing seasons did not lead to higher thermal growing seasons, as generally assumed. 
 
 % emw8Oct2025: Please switch to Sexpr for this and move to figure caption or put on figure: mean estimated effect: $5.49, UI_{95}[1.54, 9.23]$
-Instead, we found an apparently fundamental---and unexpected---trade-off where early, longer calendar growing seasons led to lower thermal growing seasons (Figure \ref{fig:thermcal}c,d, and was also found when we determined the length the growing season length with leaf coloration instead of budset, Figure \ref{fig:leafrel}). This result was driven by an apparent relationship between leafout and budset at the individual plant-level combined with the associated generally poor thermal conditions of the early season during leafout relative to the more favorable thermal conditions during budset. When plants leafed out earlier in the spring they also stopped growth (budset) earlier, but the additional days of growth in the spring---when temperatures are often very cool---were rarely offset thermally by the days lost in the later season to earlier budset, which occurred in warmer months (July-August, Figure \ref{fig:concept}a,b). % emw8Oct2025: Check my months please! I am just guessing. 
+Instead, we found an apparently fundamental---and unexpected---trade-off where early, longer calendar growing seasons led to lower thermal growing seasons (Figure \ref{fig:thermcal}c,d, this and other results were similar when we determined the length the growing season length with leaf coloration instead of budset, Figure \ref{fig:leafrel}). This result was driven by an apparent relationship between leafout and budset at the individual plant-level combined with the generally poor thermal conditions of the early season during leafout relative to the more favorable thermal conditions during budset. When plants leafed out earlier in the spring they stopped growth (budset) earlier, but the additional days of growth in the spring---when temperatures are often very cool---were rarely offset thermally by the days lost in the later season to earlier budset, which occurred in warmer months (July-August, Figure \ref{fig:concept}a,b). % emw8Oct2025: Check my months please! I am just guessing. 
 
-Perhaps not surprisingly given rising temperatures over the early spring, the trade-off between thermal and calendar growing seasons was strongest in the earlier-leafout species, which leaf out during the coolest part of the spring (Figure \ref{fig:thermcal}-\ref{fig:concept}). For later leafing species, earlier leafout did not substantially reduce their thermal growing season. This is likely because for them, an earlier leafout still occurred in thermally favorable times of the season, and a relatively small advance in calendar time resulting in a proportionately larger gain in thermal sums. Species was also the a major predictor of variation in leafout, budset and growing season length ($\sigma_{species}$ for leafout: $:\Sexpr{sig.sp} $UI_{95}$[\Sexpr{sig.sp.l},\Sexpr{sig.sp.h}], for budset: \Sexpr{bs.sig.sp} $UI_{95}$[\Sexpr{bs.sig.sp.l},\Sexpr{bs.sig.sp.h}], for season length: \Sexpr{gs.sig.sp}, $UI_{95}$[\Sexpr{gs.sig.sp.l},\Sexpr{gs.sig.sp.h}l Figure \ref{fig:vapar}a-b)
-
-Beyond species-level variation, our results also found high variation across years in both leafout and budset. Differences across years in leafout were high ($\sigma_{year}$:\Sexpr{sig.yr} $UI_{95}$[\Sexpr{sig.yr.l},\Sexpr{sig.yr.h}], Figure \ref{fig:vapar}) and expected, as leafout is highly plastic and varies strongly depending on local climatic conditions---one of the reasons it is the most consistent biological indicator of anthropogenic climate change \citep{ipcc2022}. In line with this, we also found almost no variation across populations in leafout ($\sigma_{population}$:\Sexpr{sig.pop}, $UI_{95}$[\Sexpr{sig.pop.l},\Sexpr{sig.pop.h}], Figure \ref{fig:vapar}b). Yet the finding of strong variation across years in budset was surprising (\sigma_{year}$:\Sexpr{bs.sig.yr} $UI_{95}$[\Sexpr{bs.sig.yr.l},\Sexpr{bs.sig.yr.h}], Figure \ref{fig:vapar}), given budset is generally thought to be strongly locally adapted and controlled by photoperiod, which does not vary year to year. We did find evidence of local adaptation ($\sigma_{population}$:\Sexpr{bs.sig.pop}, $UI_{95}$[\Sexpr{bs.sig.pop.l},\Sexpr{bs.sig.pop.h}], Figure \ref{fig:vapar}), but it was 6X and 4X smaller than variation due to year and species (respectively). 
-% emw8Oct2025: Above -- can you \Sexpr the ratio of the actual sigmas and round to no declimals? I am just doing 15/2.3 and 10/2.3 here... 
+The trade-off between thermal and calendar growing seasons was strongest in the earlier-leafout species, which leaf out during the coolest part of the spring (Figure \ref{fig:thermcal}-\ref{fig:concept}). For later leafing species, earlier leafout did not substantially reduce their thermal growing season. This is likely because for them, an earlier leafout still occurred in thermally favorable times of the season, and a relatively small advance in calendar time resulting in a proportionately larger gain in thermal sums. Species was also the a major predictor of variation in leafout, budset and growing season length ($\sigma_{species}$ for leafout: $:\Sexpr{sig.sp} $UI_{95}$[\Sexpr{sig.sp.l},\Sexpr{sig.sp.h}], for budset: \Sexpr{bs.sig.sp} $UI_{95}$[\Sexpr{bs.sig.sp.l},\Sexpr{bs.sig.sp.h}], for season length: \Sexpr{gs.sig.sp}, $UI_{95}$[\Sexpr{gs.sig.sp.l},\Sexpr{gs.sig.sp.h}l Figure \ref{fig:vapar}a-b).
 
 % Our results showed only small differences in the full season, measured across species and populations in calendar days (Figure \ref{fig:vapar}c) ...
 % emw8Oct2025: I thought about this (above, commented out) and your email ... I think this does not fully jive, growing seasons have been getting longer with climate change (due to earlier leafout) as best I understand, but here we say they are stable ... and we never check what happens to the thermal season, so I think this is perhaps a mess we avoid getting into by just being more speculative. That's what I tried to do, see what you think. 
-These results suggest that some of the current apparently conflicting findings may be due to different scales of observation. Our result that individual trees appear to hasten their end of season events with earlier start of season events, supports other studies finding this correlation \citep{Liu2016,Zani2020}, but the variability across species in this relationship and how it affected individuals' thermal seasons (Fig: \ref{fig:thermcal}) could potentially underlie findings of other studies. Because the trade-off between thermal and calendar growing seasons was strongly species-dependent, what previous studies find may depend strongly on the species studied, consistent with other work comparing across smaller sets of species  \citep{cuny2012life michelot2012comparing}. This variation also likely scales up to affect ecosystem-level estimates; by integrating across species some studies may find stronger correlations between productivity and earlier season. 
+% FIX ME -- be more explicit about what we mean
+These results suggest that some of the current apparently conflicting findings of whether longer seasons increase tree growth or productivity may be due to different scales of observation, including the different species they integrate over. Our result that individual trees appear to hasten their end of season events with earlier start of season events supports other studies finding a similar correlation \citep[though using alternative metrics of senescence,][]{Liu2016,Zani2020}, but found this was strongest for certain species. Thus, we may expect that studies of individual trees---and for certain species---could find little relationship between earlier leafout and growth \citep{cuny2012life michelot2012comparing,Zani2020}, which could be driven by unstudied shifts in the thermal seasons. 
+
+but how it affected individuals' thermal seasons (Fig: \ref{fig:thermcal}) could potentially underlie findings of other studies. Because the trade-off between thermal and calendar growing seasons was strongly species-dependent, what previous studies find may depend strongly on the species studied, consistent with other work comparing across smaller sets of species  \citep{cuny2012life michelot2012comparing}. 
+
+
+... the variability across species in this relationship and 
+This variation also likely scales up to affect ecosystem-level estimates; by integrating across species some studies may find stronger correlations between productivity and earlier season. 
+
+Beyond species-level variation, our results also found high variation across years in both leafout and budset. Differences across years in leafout were high ($\sigma_{year}$:\Sexpr{sig.yr} $UI_{95}$[\Sexpr{sig.yr.l},\Sexpr{sig.yr.h}], Figure \ref{fig:vapar}) and expected, as leafout is highly plastic and varies strongly depending on local climatic conditions---one of the reasons it is the most consistent biological indicator of anthropogenic climate change \citep{ipcc2022}. In line with this, we also found almost no variation across populations in leafout ($\sigma_{population}$:\Sexpr{sig.pop}, $UI_{95}$[\Sexpr{sig.pop.l},\Sexpr{sig.pop.h}], Figure \ref{fig:vapar}b). Yet the finding of strong variation across years in budset was surprising (\sigma_{year}$:\Sexpr{bs.sig.yr} $UI_{95}$[\Sexpr{bs.sig.yr.l},\Sexpr{bs.sig.yr.h}], Figure \ref{fig:vapar}), given budset is generally thought to be strongly locally adapted and controlled by photoperiod, which does not vary year to year (\citealp{soolanayakanahally2013timing,aitken2016,vico2021} though some work has begun to question this, see \citealp{Michelson2018}). We did find evidence of local adaptation ($\sigma_{population}$:\Sexpr{bs.sig.pop}, $UI_{95}$[\Sexpr{bs.sig.pop.l},\Sexpr{bs.sig.pop.h}], Figure \ref{fig:vapar}). Populations from the Second College Grant (the site with the fewest frost free days; Figure \ref{fig:ffd}) set buds approximately two days before those from the White Mountains (the site with the next fewest frost free days), but these differences were weak (Figure \ref{fig:vapar}b) and 6X and 4X smaller than variation due to year and species (respectively).  % emw8Oct2025: Above -- can you \Sexpr the ratio of the actual sigmas and round to no declimals? I am just doing 15/2.3 and 10/2.3 here... 
+
+
+The shift in budset with earlier leafout suggests a potential pathway to better understand and predict recent findings, but will require a new approaches to how we view and study budset and other end of season events. Most work on budset in broadleaf species comes from one genus (\emph{Populus spp.}) and has stressed the major control of photoperiod limiting responses to anthropogenic warming. Yet some studies have found evidence of temperature \citep{Olsen2014,Rohde2011}, contrasting with this prediction. Teasing apart effects of temperature from intrinsic correlations between start and end of season events appears an important next step. Doing so across additional species may be especially critical, as a focus on single species may not always predict broad scale trends \citep{Morales-Castilla2024}, and our results suggest important variation across species. 
+ 
+
+
+
+%% START: Stuff about fall
+
+% emwJuly22: I would move the below two paragraphs elsewhere (and fix the refs) but they might work better once you move out the first paragraph of these sections. I'd be happy to take a stab at moving things around with your approval. DB Sept17 Go for it!
+ This study shows linking phenological growing season to primary productivity requires accounting for phenological variation at multiple scales (individual, species level, multiple phases). These results suggest that progress will require more efforts to understand and model species-level shifts in phenology. While satellite observations can document intriguing trends \citep[e.g.,][]{Zohner2023}, observations that include far more species at a finer scale are likely critical for mechanistic understanding.
+ 
+Of course, budset is just one of many ways that plants begin to transition from growth to dormancy each year -- generally at different times for different events \citep{Michelson2018}. Understanding which metrics of end of season events correlate best with growth and carbon gain are well-established critical needs \citep{GALLINAT2015}. Our results suggest we also need to study how these events shift with earlier and warmer years. Studies of leaf longevity have begun to examine this, but more work across different metrics of end of season and across many more species is critical.
+%% END: Stuff about fall
+
+
+
  
 % This relationship, however, was strongly species-dependent. Later leafout in calendar time led to longer thermal seasons in species that typically leaf out earlier in the spring relative to others. This included shrubs such as \emph{Sambucus racemosa}, \emph{Viburnum cassiodes}, \emph{Spirea alba}, \emph{Diervella lonicera}, \emph{Aronia melanocarpa} \emph{Spirea tomentosa} and the tree species \emph{Betula populifolia}. Later-leafout species showed a weaker relationship (\emph{Betula papyrifera}, \emph{Betula allegheniensis} and \emph{Alnus incana}, Figure \ref{fig:thermcal}d). 
 %cjc2024Sept25: I feel curious about upper temperature thresholds and what may be considered "too hot" for some species' productivity. Based on anecdotal evidence from Tree Spotters and these common garden observations, I remember some individuals dropping leaves in late summer before bud set because of drought-like conditions. I don't know if we can always assume that higher temperatures necessarily correlate to higher productivity - I'm thinking about assimilation curves and how they hit a peak at certain temperatures but begin to drop again with higher temps. DB Sept 17: I have no doubt this will come up in review.
 
 % emw8Oct2025: Below is different compared to the community scale estimates you sent me (2020 had an SOS of 108) ... is that correct? It made me think perhaps getting into the community level estimates was not ideal ... 
 %  overall estimates of leafout and budset both earliest in 2019 and latest in 2020 (Figure \ref{fig:vapar}c). 
-
-%% START: Stuff about fall
-%% Stuff about FALL events -- SHORTEN and MOVE up 
-Spring phenological phases are reported to be more plastic than autumn ones \citep{mckown2014, aitken2016, vico2021}, but we found that, relative to 
-...
-These results are somewhat surprising as autumn phenological phases like budset % and leaf coloration 
-are commonly thought to be strongly dependent on population, with different populations requiring different critical photoperiods to trigger these phases and leading to relatively stable phase dates across years \citep{soolanayakanahally2013timing}, (and find some review paper). Supporting this---and in contrast to leafout---we found that populations did vary in their budset. Populations from the Second College Grant (the site with the fewest frost free days; Figure \ref{fig:ffd}) set buds approximately two days before those from the White Mountains (the site with the next fewest frost free days), but these differences were weak (Figure \ref{fig:vapar}b) and small.
-%Leaf coloration for populations from the Second College Grant occurred about three days before populations from the White Mountains and four days before populations from St. Hippolyte and Harvard Forest, qualitatively following an expected cline of frost free days (ADD SUPPLIMENTAL FIGURE), though as with budset, these trends were weak and small. 
-The high levels of variance we found in budset timing contrast with the dominant expectation in the literature. This suggests, we need much more work on additional species, as results to date have focused mainly on one genus (\emph{Populus}) and more efforts to understand how environmental factors beyond photoperiod may affect budset and senescence. Even for \emph{Populus balsamifera}, the species suggested to be mainly photoperiod-controlled, recent work suggests temperature may also play a major role \citep{Michelson2018}.   
-
-% emwJuly22: I would move the below two paragraphs elsewhere (and fix the refs) but they might work better once you move out the first paragraph of these sections. I'd be happy to take a stab at moving things around with your approval. DB Sept17 Go for it!
- This study shows linking phenological growing season to primary productivity requires accounting for phenological variation at multiple scales (individual, species level, multiple phases). These results suggest that progress will require more efforts to understand and model species-level shifts in phenology. While satellite observations can document intriguing trends \citep[e.g.,][]{Zohner2023}, observations that include far more species at a finer scale are likely critical for mechanistic understanding. In particular our results suggest budset may be far more variable year to year than often suggested \citep{Michelson2018} but see{\citep{mckown2014, Vander2016}. Recent work supports this, by highlighting an important role for temperature alongside photoperiod, in driving budset \citep{Olsen2014,Rohde2011}. %dlAug21: I think this last sentence would fit well before this sentence about year to year variation.
- Further, most work on budset in broadleaf species comes from one genus (\emph{Populus spp.}) highlighting a critical gap, as a focus on single species may not always predict broad scale trends \citep{Morales-Castilla2024}. 
- 
-Of course, budset is just one of many ways that plants begin to transition from growth to dormancy each year -- generally at different times for different events \citep{Michelson2018}. Understanding which metrics of end of season events correlate best with growth and carbon gain are well-established critical needs \citep{GALLINAT2015}. Our results suggest we also need to study how these events shift with earlier and warmer years. Studies of leaf longevity have begun to examine this, but more work across different metrics of end of season and across many more species is critical.
-%dlAug21: could we elaborate on what is meant by "well-established critical needs"?
-%% END: Stuff about fall
 
 % All results were qualitatively consistent when we model leaf coloration as the end of growing season phenophase (Figure \ref{fig:alta}). Observed correlations between leaf out and leaf coloration maintaining relatively stable calendar growing seasons over the years. Population-level variation in leaf coloration following an environmental cline with leaf coloration occurring marginally earlier for populations from sites with fewer frost-free days.
 
