Finally, major overhaul mostly done, but see comments throughout (esp at to do)

--- a/refs/wildhell.bib
+++ b/refs/wildhell.bib
@@ -1,12 +1,29 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Elizabeth M Wolkovich at 2025-10-08 18:00:33 -0700 
+%% Created for Elizabeth M Wolkovich at 2025-10-20 19:52:52 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{heberling2019,
+	author = {Heberling, J. Mason and Cassidy, Steven T. and Fridley, Jason D. and Kalisz, Susan},
+	date-added = {2025-10-20 19:52:49 +0200},
+	date-modified = {2025-10-20 19:52:49 +0200},
+	doi = {10.1111/nph.15404},
+	issn = {0028-646X},
+	journal = {New Phytologist},
+	number = {2},
+	pages = {778-788},
+	title = {Carbon gain phenologies of spring-flowering perennials in a deciduous forest indicate a novel niche for a widespread invader},
+	type = {Journal Article},
+	url = {<Go to ISI>://WOS:000453883200022},
+	volume = {221},
+	year = {2019},
+	bdsk-url-1 = {%3CGo%20to%20ISI%3E://WOS:000453883200022},
+	bdsk-url-2 = {https://doi.org/10.1111/nph.15404}}
 
 @article{cuny2012life,
 	author = {Cuny, Henri E and Rathgeber, Cyrille BK and Lebourgeois, Fran{\c{c}}ois and Fortin, Mathieu and Fournier, Meriem},
