--- a/docs/phen_framing.Rnw
+++ b/docs/phen_framing.Rnw
@@ -170,15 +170,18 @@ gs.sig.pop.h<-round(pop_sigma_gs[1,3],2)
 
 %% To do:
 % Fix the abstract
-% Fix: Stuff about FALL events -- SHORTEN and MOVE up 
-% Fix: the last section ... (Ecological and forecasting implications)
 % Sneak a few methods into the pre-results paragraph -- community of species (all co-occur), how many spp (and delete from methods)
-% Fix the % FIX ME paragraph
-% Somewhere we need to say we did not have all the species we hoped too and we need more late-leafout species!
-% Me: Check notes from hand-written copy
+% Me: A few small items, see % TodoOct2025:
+% Me/Dan: add citations (at ADDcites?) and other places likely, ONCE we know the ref count
+% Me/Dan: When we do cut text, perhaps save for cover letter!
 % Dan and me: Make sure we say higher/lower thermal seasons throughout... 
 % Dan: Fix concept figure to say how many thermal units you get per day in spring vs later
-% emw8Oct2025: 
+% Dan: Get a word count of abstract to refs (and also get a ref count) ... how far off are we from https://github.com/vvandermeersch/synchrony/issues/4
+% Dan: Add units to numbers and switch to 90% intervals? (5 and 95%)?
+% Dan: For figure 2 -- can you we show 90% (or 95% if you much prefer) intervals not 1000 draws?
+% Dan: 2-31 individuals per species (Tab. \ref{listSp}) -- I would give the mean then the range (2 sounds bad), also, you probably need to lose the table so maybe just link to the posted data?
+% Dan: Fig 3b -- it would be great to estimate in the figure (and just show it) the GDD accumulated in the earliest 24 days of the dark line (draw a box around and write: GDD gained in 24 days earlier than conspecific: XX)  and do the same for the end of the later individual. Also I would write: Thermal season (GDD) for the Y axis and work to keep terms consistent across figures. 
+% Most comments say: emw8Oct2025: 
 
 \section{Abstract}
 % emwJuly22: I can make more edits to abstract when we have a journal in mind and thus a length
@@ -217,6 +220,7 @@ Here, we use rarely available plant-scale data---phenological observations over 
 % emw8Oct2025: END of stuff I changed/comments
 \fi
 
+% TodoOct2025: Sneak in methods ... across 18 species and four populations? Then delete from methods?
 Across three years, our multi-population and multi-species common garden captured high variation in the timing of both start and end of season events  (Figure \ref{fig:vapar}). Resulting calendar and thermal growing seasons varied almost two-fold across individual trees (ADD INFO),  % emw8Oct2025:  Just take the max value of Fig 2a and divide by min, do the same for 2c).
 % emw8Oct2025: Please switch to Sexpr for this and move to figure caption or put on figure: mean estimated effect: $-0.44, UI_{95}[-0.73, -0.16]$, 
 with earlier leafout leading to longer calendar growing seasons (Fig: \ref{fig:thermcal}a,b), as routinely seen with anthropogenic climate change \citep{Menzel1999,Liu2010}. However, longer calendar growing seasons did not lead to higher thermal growing seasons, as generally assumed. 
@@ -224,38 +228,17 @@ with earlier leafout leading to longer calendar growing seasons (Fig: \ref{fig:t
 % emw8Oct2025: Please switch to Sexpr for this and move to figure caption or put on figure: mean estimated effect: $5.49, UI_{95}[1.54, 9.23]$
 Instead, we found an apparently fundamental---and unexpected---trade-off where early, longer calendar growing seasons led to lower thermal growing seasons (Figure \ref{fig:thermcal}c,d, this and other results were similar when we determined the length the growing season length with leaf coloration instead of budset, Figure \ref{fig:leafrel}). This result was driven by an apparent relationship between leafout and budset at the individual plant-level combined with the generally poor thermal conditions of the early season during leafout relative to the more favorable thermal conditions during budset. When plants leafed out earlier in the spring they stopped growth (budset) earlier, but the additional days of growth in the spring---when temperatures are often very cool---were rarely offset thermally by the days lost in the later season to earlier budset, which occurred in warmer months (July-August, Figure \ref{fig:concept}a,b). % emw8Oct2025: Check my months please! I am just guessing. 
 
-The trade-off between thermal and calendar growing seasons was strongest in the earlier-leafout species, which leaf out during the coolest part of the spring (Figure \ref{fig:thermcal}-\ref{fig:concept}). For later leafing species, earlier leafout did not substantially reduce their thermal growing season. This is likely because for them, an earlier leafout still occurred in thermally favorable times of the season, and a relatively small advance in calendar time resulting in a proportionately larger gain in thermal sums. Species was also the a major predictor of variation in leafout, budset and growing season length ($\sigma_{species}$ for leafout: $:\Sexpr{sig.sp} $UI_{95}$[\Sexpr{sig.sp.l},\Sexpr{sig.sp.h}], for budset: \Sexpr{bs.sig.sp} $UI_{95}$[\Sexpr{bs.sig.sp.l},\Sexpr{bs.sig.sp.h}], for season length: \Sexpr{gs.sig.sp}, $UI_{95}$[\Sexpr{gs.sig.sp.l},\Sexpr{gs.sig.sp.h}l Figure \ref{fig:vapar}a-b).
+The trade-off between thermal and calendar growing seasons was strongest in the earlier-leafout species, which leaf out during the coolest part of the spring (Figure \ref{fig:thermcal}-\ref{fig:concept}). For later leafing species, earlier leafout did not substantially reduce their thermal growing season. This is likely because for later species an earlier leafout still occurred in thermally favorable times of the season, and a relatively small advance in calendar time resulting in a proportionately larger gain in thermal sums. Species was also the a major predictor of variation in leafout, budset and growing season length ($\sigma_{species}$ for leafout: $:\Sexpr{sig.sp} $UI_{95}$[\Sexpr{sig.sp.l},\Sexpr{sig.sp.h}], for budset: \Sexpr{bs.sig.sp} $UI_{95}$[\Sexpr{bs.sig.sp.l},\Sexpr{bs.sig.sp.h}], for season length: \Sexpr{gs.sig.sp}, $UI_{95}$[\Sexpr{gs.sig.sp.l},\Sexpr{gs.sig.sp.h}l Figure \ref{fig:vapar}a-b).
 
 % Our results showed only small differences in the full season, measured across species and populations in calendar days (Figure \ref{fig:vapar}c) ...
-% emw8Oct2025: I thought about this (above, commented out) and your email ... I think this does not fully jive, growing seasons have been getting longer with climate change (due to earlier leafout) as best I understand, but here we say they are stable ... and we never check what happens to the thermal season, so I think this is perhaps a mess we avoid getting into by just being more speculative. That's what I tried to do, see what you think. 
-% FIX ME -- be more explicit about what we mean
-These results suggest that some of the current apparently conflicting findings of whether longer seasons increase tree growth or productivity may be due to different scales of observation, including the different species they integrate over. Our result that individual trees appear to hasten their end of season events with earlier start of season events supports other studies finding a similar correlation \citep[though using alternative metrics of senescence,][]{Liu2016,Zani2020}, but found this was strongest for certain species. Thus, we may expect that studies of individual trees---and for certain species---could find little relationship between earlier leafout and growth \citep{cuny2012life michelot2012comparing,Zani2020}, which could be driven by unstudied shifts in the thermal seasons. 
+These results suggest that some of the current apparently conflicting findings of whether longer seasons increase tree growth or productivity may be due to different scales of observation, including the different species they integrate over. Our result that individual trees appear to hasten their end of season events with earlier start of season events supports other studies finding a similar correlation \citep[though using alternative metrics of senescence,][]{Liu2016,Zani2020}, but found this was strongest for certain species. Thus, we may expect that studies of individual trees---and for certain species---could find little relationship between earlier leafout and growth \citep{cuny2012life michelot2012comparing,Zani2020}, which could be driven by currently unstudied shifts in the thermal seasons. Additionally, because the trade-off between thermal and calendar growing seasons was strongly species-dependent, what previous studies find may depend strongly on the species studied, consistent with other work comparing across smaller sets of species  \citep{cuny2012life,michelot2012comparing}. This variation also likely scales up to affect ecosystem-level estimates which generally have one measure of the start of season---for the earliest leafout species---and one for the end of season, likely capturing the later-leafout species given the correlations we found between start and end of season events. Thus, by integrating across species some studies may find stronger correlations between productivity and earlier seasons. 
 
-but how it affected individuals' thermal seasons (Fig: \ref{fig:thermcal}) could potentially underlie findings of other studies. Because the trade-off between thermal and calendar growing seasons was strongly species-dependent, what previous studies find may depend strongly on the species studied, consistent with other work comparing across smaller sets of species  \citep{cuny2012life michelot2012comparing}. 
+Beyond species-level variation, our results also found high variation across years in both leafout and budset. Differences across years in leafout were high ($\sigma_{year}$:\Sexpr{sig.yr} $UI_{95}$[\Sexpr{sig.yr.l},\Sexpr{sig.yr.h}], Figure \ref{fig:vapar}) and expected, as leafout is highly plastic and varies strongly depending on local climatic conditions---one of the reasons it is the most consistent biological indicator of anthropogenic climate change \citep{ipcc2022}. In line with this, we also found almost no variation across populations in leafout ($\sigma_{population}$:\Sexpr{sig.pop}, $UI_{95}$[\Sexpr{sig.pop.l},\Sexpr{sig.pop.h}], Figure \ref{fig:vapar}b). Yet the finding of strong variation across years in budset was surprising (\sigma_{year}$:\Sexpr{bs.sig.yr} $UI_{95}$[\Sexpr{bs.sig.yr.l},\Sexpr{bs.sig.yr.h}], Figure \ref{fig:vapar}), given budset is generally thought to be strongly locally adapted and controlled by photoperiod, which does not vary year to year \citep{soolanayakanahally2013timing,aitken2016,vico2021}. We did find evidence of local adaptation ($\sigma_{population}$:\Sexpr{bs.sig.pop}, $UI_{95}$[\Sexpr{bs.sig.pop.l},\Sexpr{bs.sig.pop.h}], Figure \ref{fig:vapar}). Populations from the Second College Grant (the site with the fewest frost free days; Figure \ref{fig:ffd}) set buds approximately two days before those from the White Mountains (the site with the next fewest frost free days). These differences, however, were weak (Figure \ref{fig:vapar}b) and 6X and 4X smaller than the variation due to year and species (respectively).  % emw8Oct2025: Above -- can you \Sexpr the ratio of the actual sigmas and round to no declimals? I am just doing 15/2.3 and 10/2.3 here... 
 
+The shift in budset with earlier leafout suggests a potential pathway to better understand and predict recent findings, but will require a new approaches to how we view and study budset and other end of season events. Most work on budset in broadleaf species comes from one genus (\emph{Populus spp.}) and has stressed the major control of photoperiod limiting responses to anthropogenic warming. Yet some studies have found evidence of temperature \citep{Olsen2014,Rohde2011,Michelson2018}, contrasting with this prediction. Teasing apart effects of temperature from intrinsic correlations between start and end of season events appears an important next step. Doing so across additional species may be especially helpful, as a focus on single species may not always predict broad scale trends \citep{Morales-Castilla2024}, and our results suggest important variation across species. 
 
-... the variability across species in this relationship and 
-This variation also likely scales up to affect ecosystem-level estimates; by integrating across species some studies may find stronger correlations between productivity and earlier season. 
+Budset represents the stop of height growth and generally correlates strongly with the stop of radial growth \citep{soolanayakanahally2013timing}, but it is only one of many ways that plants begin to transition from growth to dormancy each year---generally at different times for different events \citep{Michelson2018}. While the need to better understand which metrics of end of season events correlate best with growth and carbon gain has been often discussed \citep{GALLINAT2015,Korner2023}, our results suggest we also need to study how these events shift with earlier and warmer years. Studies of leaf longevity have begun to examine this, but more work across different metrics of end of season and across many more species is critical.
 
-Beyond species-level variation, our results also found high variation across years in both leafout and budset. Differences across years in leafout were high ($\sigma_{year}$:\Sexpr{sig.yr} $UI_{95}$[\Sexpr{sig.yr.l},\Sexpr{sig.yr.h}], Figure \ref{fig:vapar}) and expected, as leafout is highly plastic and varies strongly depending on local climatic conditions---one of the reasons it is the most consistent biological indicator of anthropogenic climate change \citep{ipcc2022}. In line with this, we also found almost no variation across populations in leafout ($\sigma_{population}$:\Sexpr{sig.pop}, $UI_{95}$[\Sexpr{sig.pop.l},\Sexpr{sig.pop.h}], Figure \ref{fig:vapar}b). Yet the finding of strong variation across years in budset was surprising (\sigma_{year}$:\Sexpr{bs.sig.yr} $UI_{95}$[\Sexpr{bs.sig.yr.l},\Sexpr{bs.sig.yr.h}], Figure \ref{fig:vapar}), given budset is generally thought to be strongly locally adapted and controlled by photoperiod, which does not vary year to year (\citealp{soolanayakanahally2013timing,aitken2016,vico2021} though some work has begun to question this, see \citealp{Michelson2018}). We did find evidence of local adaptation ($\sigma_{population}$:\Sexpr{bs.sig.pop}, $UI_{95}$[\Sexpr{bs.sig.pop.l},\Sexpr{bs.sig.pop.h}], Figure \ref{fig:vapar}). Populations from the Second College Grant (the site with the fewest frost free days; Figure \ref{fig:ffd}) set buds approximately two days before those from the White Mountains (the site with the next fewest frost free days), but these differences were weak (Figure \ref{fig:vapar}b) and 6X and 4X smaller than variation due to year and species (respectively).  % emw8Oct2025: Above -- can you \Sexpr the ratio of the actual sigmas and round to no declimals? I am just doing 15/2.3 and 10/2.3 here... 
-
-
-The shift in budset with earlier leafout suggests a potential pathway to better understand and predict recent findings, but will require a new approaches to how we view and study budset and other end of season events. Most work on budset in broadleaf species comes from one genus (\emph{Populus spp.}) and has stressed the major control of photoperiod limiting responses to anthropogenic warming. Yet some studies have found evidence of temperature \citep{Olsen2014,Rohde2011}, contrasting with this prediction. Teasing apart effects of temperature from intrinsic correlations between start and end of season events appears an important next step. Doing so across additional species may be especially critical, as a focus on single species may not always predict broad scale trends \citep{Morales-Castilla2024}, and our results suggest important variation across species. 
- 
-
-
-
-%% START: Stuff about fall
-
-% emwJuly22: I would move the below two paragraphs elsewhere (and fix the refs) but they might work better once you move out the first paragraph of these sections. I'd be happy to take a stab at moving things around with your approval. DB Sept17 Go for it!
- This study shows linking phenological growing season to primary productivity requires accounting for phenological variation at multiple scales (individual, species level, multiple phases). These results suggest that progress will require more efforts to understand and model species-level shifts in phenology. While satellite observations can document intriguing trends \citep[e.g.,][]{Zohner2023}, observations that include far more species at a finer scale are likely critical for mechanistic understanding.
- 
-Of course, budset is just one of many ways that plants begin to transition from growth to dormancy each year -- generally at different times for different events \citep{Michelson2018}. Understanding which metrics of end of season events correlate best with growth and carbon gain are well-established critical needs \citep{GALLINAT2015}. Our results suggest we also need to study how these events shift with earlier and warmer years. Studies of leaf longevity have begun to examine this, but more work across different metrics of end of season and across many more species is critical.
-%% END: Stuff about fall
-
-
-
- 
 % This relationship, however, was strongly species-dependent. Later leafout in calendar time led to longer thermal seasons in species that typically leaf out earlier in the spring relative to others. This included shrubs such as \emph{Sambucus racemosa}, \emph{Viburnum cassiodes}, \emph{Spirea alba}, \emph{Diervella lonicera}, \emph{Aronia melanocarpa} \emph{Spirea tomentosa} and the tree species \emph{Betula populifolia}. Later-leafout species showed a weaker relationship (\emph{Betula papyrifera}, \emph{Betula allegheniensis} and \emph{Alnus incana}, Figure \ref{fig:thermcal}d). 
 %cjc2024Sept25: I feel curious about upper temperature thresholds and what may be considered "too hot" for some species' productivity. Based on anecdotal evidence from Tree Spotters and these common garden observations, I remember some individuals dropping leaves in late summer before bud set because of drought-like conditions. I don't know if we can always assume that higher temperatures necessarily correlate to higher productivity - I'm thinking about assimilation curves and how they hit a peak at certain temperatures but begin to drop again with higher temps. DB Sept 17: I have no doubt this will come up in review.
 
@@ -265,26 +248,26 @@ Of course, budset is just one of many ways that plants begin to transition from 
 % All results were qualitatively consistent when we model leaf coloration as the end of growing season phenophase (Figure \ref{fig:alta}). Observed correlations between leaf out and leaf coloration maintaining relatively stable calendar growing seasons over the years. Population-level variation in leaf coloration following an environmental cline with leaf coloration occurring marginally earlier for populations from sites with fewer frost-free days.
 
 \subsection{Ecological and forecasting implications}
-% Stuff from above to try to add to original section ... 
-% Also try to mention Cat's point  %cjc2024Sept25: I feel curious about upper temperature thresholds ...
-Further, the observed trade-off was driven by variation across years at the individual and species levels---scales that are not always studied closely in phenology research, where many long-term records from natural systems were not collected on specific individuals and satellite observations integrate over species in an ecosystem \citep{Menzel1999,Pettorelli:2005ns,phenophylo}. While experiments almost always track individuals, they often last only one year and are conducted often on one species, making it difficult to scale them up. While new data is continually changing this reality, we need better data to link mechanistically from the plant to community and ecosystem ...
- 
- Our results suggest that earlier leafout may have little effect on the thermal growing season because of unfavorably low temperatures combined with the observed correlation between leafout and budset (Figure \ref{fig:vapar}). Given that photosynthesis is limited by cold temperatures in early spring, earlier leafout appears to provide limited opportunity for substantial growth, yet may deprive plants of fully using late-season warmth. This may explain why multiple studies have failed to find correlations between longer seasons and increased plant growth \citep{cufar2015variations,camarero2022decoupled,dow2022warm,silvestro2023longer}. % cites from noeviany in whathappened.R in grephon repo
+
+%  Our results suggest that earlier leafout may have little effect on the thermal growing season because of unfavorably low temperatures combined with the observed correlation between leafout and budset (Figure \ref{fig:vapar}).% ADDcites? from noeviany in whathappened.R in grephon repo
+
+Our multi-species common garden study showed that for early-leafing species, earlier leafout does not extend their thermal growing season---a proxy for potential carbon uptake period---despite extending the calendar growing season.  Given that photosynthesis is limited by cold temperatures in early spring, earlier leafout appears to provide limited opportunity for substantial growth, yet may deprive plants of fully using late-season warmth. This may explain why multiple studies have failed to find correlations between longer seasons and increased plant growth \citep{cufar2015variations,camarero2022decoupled,dow2022warm,silvestro2023longer}. Our results show that there may be little advantage from a carbon or primary productive perspective for leafing out too early in the season, as thermal conditions are not favorable for photosynthesis and assimilation. Many of the species that are most phenologically sensitive to climate change are already among the earliest species to leaf out in temperate plant communities \citep{Shen2014,Geng2020}, implying there may be little to gain from a carbon perspective.
+%cjc2024Sept25: I love this above paragraph!! It's a thoughtful hypothesis that could explain so much. 
+
+This trade-off between earlier leafout and the thermal season was driven by variation across years at the individual and species levels---scales that are not always studied closely in phenology research, where many long-term records from natural systems were not collected on specific individuals and satellite observations integrate over species in an ecosystem \citep{Menzel1999,Pettorelli:2005ns,phenophylo}. %  While experiments almost always track individuals, they often last only one year and are conducted often on one species, making it difficult to scale them up. While new data is continually changing this reality, we need better data to link mechanistically from the plant to community and ecosystem ...
+
+Our results suggest that linking phenological growing season to primary productivity requires accounting for phenological variation at multiple scales (individual, species level, multiple phases). Progress will require more efforts to understand and model species-level shifts in phenology. While satellite observations can document intriguing trends \citep[e.g.,][]{Zohner2023}, observations that include far more species at a finer scale are likely critical for mechanistic understanding. Sampling across species of different leafout and growth strategies appears especially important as we found later-leafout species did not exhibit a strong trade-off, but whether this is consistent across other communities of species---and some of the latest leafout species, which are often difficult to grow in common gardens (given their slow growth)---and other climates is an important questions. Understanding whether the thermal responses are consistent across species with different leafout and growth strategies could also inform how the thermal season varies over time, and by species. 
+
+% emwOct2025: This feel repetitive with above... 
+% This relationship was in part explained by positive correlations between leafout and budset where later leafing individuals also set buds later, extending their growth into that later part of the season when thermal conditions were more favorable. For later leafing species, earlier leafout did not substantially reduce their thermal growing season. This is likely because for them, an earlier leafout still occurred in thermally favorable times of the season, and a relatively small advance in calendar time resulting in a proportionately larger gain in thermal sums.
+
 %The thermal growth season is likely a better proxy for carbon gain. Even with very weak carry-over effects between SoS and EoS, phenological advances that drive SoS into less favorable conditions for carbon assimilation in the early spring, trade more carbon gain in mid season for reduced gain in early. 
 % The dynamics may help to explain why phenology advances with climate change have not clearly translated into higher levels of primary productive \citep{}.
 
-% Start of original section .. 
-Our multi-species common garden study showed that for early-leafing species, earlier leafout does not extend their thermal growing season---a proxy for potential carbon uptake period---despite extending the calendar growing season. For early-leafout species, years with delayed leafout resulted in a longer thermal growing season. This relationship was in part explained by positive correlations between leafout and budset where later leafing individuals also set buds later, extending their growth into that later part of the season when thermal conditions were more favorable. For later leafing species, earlier leafout did not substantially reduce their thermal growing season. This is likely because for them, an earlier leafout still occurred in thermally favorable times of the season, and a relatively small advance in calendar time resulting in a proportionately larger gain in thermal sums.
-
-Our results show that there is little advantage from a carbon or primary productive perspective for leafing out too early in the season, as thermal conditions are not favorable for photosynthesis and assimilation. Many of the species that are most phenologically sensitive to climate change are already among the earliest species to leaf out in temperate plant communities \citep{Shen2014,Geng2020}, implying there may be little to gain from a carbon perspective.
-%cjc2024Sept25: I love this above paragraph!! It's a thoughtful hypothesis that could explain so much. 
-
-This result raises question about why some species leafout early during these unfavorable conditions, and why species tracking spring warming due to climate change have increased performance relative to non-trackers \citep{Cleland2012}. In our study we only evaluated the thermal conditions that may affect photosynthesis, rather than photosynthesis itself, which also depends strongly on light availability. In forest systems, light availability is strongly dependent on canopy conditions. In our study, the species that leafed out the earliest are understory shrubs, for whom access to light becomes severely limited later in the growing season as canopy trees leaf out. It may be that for these species, the light availability early in the season necessitates leafing out in sub-optimal thermal conditions. In fact, some studies suggest that understory shrubs get all/most of their carbon before canopy closure \citep{AUGSPURGER2005}.
-
+Our results raise questions about why some species leafout early during these unfavorable conditions, and why species tracking spring warming due to climate change have increased performance relative to non-trackers \citep{Cleland2012}. In our study we only evaluated the thermal conditions that may affect photosynthesis, rather than photosynthesis itself, which also depends strongly on light availability. In forest systems, light availability is strongly dependent on canopy conditions. In our study, the species that leafed out the earliest are understory shrubs, for whom access to light becomes severely limited later in the growing season as canopy trees leaf out. It may be that for these species, the light availability early in the season necessitates leafing out in sub-optimal thermal conditions \citep{AUGSPURGER2005}.
 
  
- 
-\section{Methods} %emwNov4 -- Skipping!
+\section{Methods} 
 \subsubsection{The Common Garden}
 % emwJuly22: do you want to cite Baskin^2 for 'germination protocols.' 
 In 2014-2015, we collected seeds of 18 species woody plants from multiple parent plants at four field sites in eastern Northern America spanning approximately a 3.5 degree latitudinal gradient. The four field sites included Harvard Forest (42.55$^{\circ}$N, 72.20$^{\circ}$W), the White Mountains (44.11$^{\circ}$N, 52.14$^{\circ}$W), Second College Grant of Dartmouth College (44.79$^{\circ}$N, 50.66$^{\circ}$W), and St. Hippolyte, QC, CAN (45.98$^{\circ}$N, 74.01$^{\circ}$W). We transported all seeds back the the Weld Hill Research Building at the Arnold Arboretum in Boston MA (42.30$^{\circ}$N, 71.13$^{\circ}$W) where we germinated seeds following standard germination protocols, and grew them to seedling stages in the research greenhouse. In the spring of 2017 we out-planted seedlings to establish the Common garden (Table \ref{listSp}. %Plantings were randomized between 16 plot blocks. Individuals that were too small to survive outside were maintained in the growth facilities for an additional year and out-planted in the early spring of 2018. Plots were divided between tree plots which included species  \textit{Acer pensylvanicum}, \textit{Amelanchier canadensis}, \textit{Alnus incana}, \textit{Betula papyrifera}, \textit{Betula populifolia}, \textit{Beluta alleghaniensis}, \textit{Quercus alba}, and \textit{Quercus rubra} and shrub plots which included the remaining species and shade cloth (Table \ref{listSp}). %dlAug21: I would just refer to the table rather than list all the tree species
@@ -321,7 +304,7 @@ Thanks to Kea Woodruff and Lee Toomey for the help planting and caring for the W
 \begin{figure}[h!]
     \centering
  \includegraphics[width=.8\textwidth]{..//analyses/figures/primarygrowingseason_modplots.jpeg} 
-    \caption{The relationship between Start of Spring (calendar day of leafout) and growing season length differs between the calendar growing season and the thermal growing season. Later leafout resulted in a shorter calendar growing season (a) and this pattern was consistent across species in our study (b). In contrast, an increasing later leafout resulted in a longer thermal growing season (c) though this effect was stronger for species that typically leafout earlier in the season---panels in c) display in the typical order of leafout among species. The blue trend lines represent the mean effect of leafout timing on growing season length and black lines represent 1000 draws from the posterior distribution as a measure of uncertainty. Points in a), and c) represent the raw data.}
+    \caption{The relationship between Start of Spring (calendar day of leafout) and growing season length differs between the calendar growing season and the thermal growing season. Later leafout resulted in a shorter calendar growing season (a) and this pattern was consistent across species in our study (b). In contrast, an increasing later leafout resulted in a longer thermal growing season (c) though this effect was stronger for species that typically leafout earlier in the season---panels in c) display in the typical order of leafout among species. The blue trend lines represent the mean effect of leafout timing on growing season length and black lines represent 1000 draws from the posterior distribution as a measure of uncertainty. Points in a), and c) represent the raw data (per individual tree per year).}
     \label{fig:thermcal}
 \end{figure}
 
