--- a/docs/supple.Rnw
+++ b/docs/supple.Rnw
@@ -32,44 +32,62 @@
 \begin{document}
 \SweaveOpts{concordance=TRUE}
 
-\section{Tables}
-\begin{table}[ht]
-\centering
+%\section{Tables}
+%\begin{table}[ht]
+%\centering
 
-\label{listSp}
-\begin{tabular}{lrr}
-  \hline
-Species & functional group & n \\ 
-  \hline
-  \emph{Acer pensylvanicum} & tree  & 2 \\ 
-  *\emph{Acer spicatum} & tree & \emph{NA}  \\ 
-   \emph{Alnus incana} & shrub & 31 \\ 
-   \emph{Amelanchier canadensis} &  shrub & 6  \\ 
-  \emph{Aronia melanocarpa} & shrub & 12 \\ 
-  \emph{Betula alleghaniensis} &  tree & 24\\ 
-  \emph{Betula papyrifera} &   tree & 13 \\ 
-  \emph{Betula populifolia} &  tree & 24\\ 
-  \emph{Diervilla lonicera} &  shrub  & 16 \\ 
-  \emph{Myrica gale} &  shrub & 15\\ 
-  *\emph{Quercus alba} &  tree & \emph{NA}\\ 
-  *\emph{Quercus rubra} &  tree & \emph{NA}\\ 
-  \emph{Sambucus racemosa} &  shrub & 11\\ 
-  \emph{Sorbus americana} &  shrub & 5\\
-  \emph{Spiraea alba} &  shrub & 19\\ 
-  \emph{Spiraea tomentosa} &   shrub & 21 \\ 
- * \emph{Vaccinium myrtilloides} &  shrub & \emph{NA}\\ 
-  \emph{Viburnum cassinoides} &  shrub & 25 \\ 
-  \end{tabular}
-  \caption{Common garden focal species. In 2017, olantings were randomized between 16 plot blocks. Individuals that were too small to survive outside were maintained in the growth facilities for an additional year and out-planted in the early spring of 2018. Plots were divided between tree plots which included species  \textit{Acer pensylvanicum}, \textit{Amelanchier canadensis}, \textit{Alnus incana}, \textit{Betula papyrifera}, \textit{Betula populifolia}, \textit{Beluta alleghaniensis}, \textit{Quercus alba}, and \textit{Quercus rubra} and shrub plots which included the remaining species and shade cloth. * indicates species that were planted but not included in analyses due to low survivorship.} 
-\end{table}
+%\label{listSp}
+%\begin{tabular}{lrr}
+%  \hline
+%Species & functional group & n \\ 
+%  \hline
+%  \emph{Acer pensylvanicum} & tree  & 2 \\ 
+%  *\emph{Acer spicatum} & tree & \emph{NA}  \\ 
+%   \emph{Alnus incana} & shrub & 31 \\ 
+ %  \emph{Amelanchier canadensis} &  shrub & 6  \\ 
+%  \emph{Aronia melanocarpa} & shrub & 12 \\ 
+%  \emph{Betula alleghaniensis} &  tree & 24\\ 
+%  \emph{Betula papyrifera} &   tree & 13 \\ 
+%  \emph{Betula populifolia} &  tree & 24\\ 
+%  \emph{Diervilla lonicera} &  shrub  & 16 \\ 
+%  \emph{Myrica gale} &  shrub & 15\\ 
+%  *\emph{Quercus alba} &  tree & \emph{NA}\\ 
+%  *\emph{Quercus rubra} &  tree & \emph{NA}\\ 
+%  \emph{Sambucus racemosa} &  shrub & 11\\ 
+%  \emph{Sorbus americana} &  shrub & 5\\
+%  \emph{Spiraea alba} &  shrub & 19\\ 
+%  \emph{Spiraea tomentosa} &   shrub & 21 \\ 
+% * \emph{Vaccinium myrtilloides} &  shrub & \emph{NA}\\ 
+ % \emph{Viburnum cassinoides} &  shrub & 25 \\ 
+ % \end{tabular}
+ % \caption{Common garden focal species. In 2017, olantings were randomized between 16 plot blocks. Individuals that were too small to survive outside were maintained in the growth facilities for an additional year and out-planted in the early spring of 2018. Plots were divided between tree plots which included species  \textit{Acer pensylvanicum}, \textit{Amelanchier canadensis}, \textit{Alnus incana}, \textit{Betula papyrifera}, \textit{Betula populifolia}, \textit{Beluta alleghaniensis}, \textit{Quercus alba}, and \textit{Quercus rubra} and shrub plots which included the remaining species and shade cloth. * indicates species that were planted but not included in analyses due to low survivorship.} 
+%\end{table}
 
+\section{Methods} 
+\subsubsection{The Common Garden}
+% emwJuly22: do you want to cite Baskin^2 for 'germination protocols.' 
+In 2014-2015, we collected seeds %of 18 species woody plants from multiple parent plants at
+from four field sites in eastern Northern America spanning approximately a 3.5 degree latitudinal gradient. The four field sites included Harvard Forest (42.55$^{\circ}$N, 72.20$^{\circ}$W), the White Mountains (44.11$^{\circ}$N, 52.14$^{\circ}$W), Second College Grant of Dartmouth College (44.79$^{\circ}$N, 50.66$^{\circ}$W), and St. Hippolyte, QC, CAN (45.98$^{\circ}$N, 74.01$^{\circ}$W). We transported all seeds back the the Weld Hill Research Building at the Arnold Arboretum in Boston MA (42.30$^{\circ}$N, 71.13$^{\circ}$W) where we germinated seeds following standard germination protocols, and grew them to seedling stages in the research greenhouse. In the spring of 2017 we out-planted seedlings to establish thexCommon garden. %Plantings were randomized between 16 plot blocks. Individuals that were too small to survive outside were maintained in the growth facilities for an additional year and out-planted in the early spring of 2018. Plots were divided between tree plots which included species  \textit{Acer pensylvanicum}, \textit{Amelanchier canadensis}, \textit{Alnus incana}, \textit{Betula papyrifera}, \textit{Betula populifolia}, \textit{Beluta alleghaniensis}, \textit{Quercus alba}, and \textit{Quercus rubra} and shrub plots which included the remaining species and shade cloth (Table \ref{listSp}). %dlAug21: I would just refer to the table rather than list all the tree species
 
+Plots were regularly weeded and watered throughout the duration of the study and were pruned in the fall of 2020. Survival of \textit{Acer spicatum}, \textit{Acer pensylvanicum}, \emph{Vaccinium myrtilloides} \textit{Quercus alba}, and \textit{Quercus rubra} was limited and these species are therefore not included in the following analyses. Based on survivorship in the common garden, our subsequent analyses included an average of 14 individuals per species. Our statistical analyses account for the unbalanced design that is frequently occurs in common gardens and other provenance trials (CITE).
+
+\subsubsection{Phenological monitoring:}
+For the years of 2018-2019, we made phenological observations of all individuals in the common garden twice per week from February to December. In 2020 due to the COVID 19 pandemic, we monitored once per week from March to November. We describe phenological stages using a modified BBCH scale \citep{Finn2007} a common metrics for quantify woody plant phenological progression. We observed all major vegetative stages (budburst BBCH 07, leafout BBCH 15, end of leaf expansion bbch 19, leaf coloration/drop BBCH 97, reproductive phases flowering BBCH 60-65, fruiting BBCH 72-79 and fruit/cones fully ripe BBCH 89). We added additional phases for budset and labelled full budset as BBCH 102. 
+
+\subsubsection{Data analysis}
+To better understand the role that variation in leafout and budset phenology play in determining calendar growing season length among species populations and years we fit a Bayesian hierarchical model with a normal (Gaussian) probability distribution. We calculated growing season duration by subtracting the day of leafout from the day of budset. We fit an intercept only model with phenophase timing (leafout, budset or growing season duration) as the response variable and partial pooling across species, populations and years. We only included observations with both budset and leafout observed on the same plant in this analysis ($n$= 595).
+
+To assess the relationship between variation in leafout timing and calendar and thermal growing seasons we fit two additional regression models with thermal or calendar growing season length as the response variable and day of leafout as the main prediction. To account for species-level differences we included partially pooling on the slope and intercept of species.
+
+We define the thermal growing season as the cumulative growing degree day heat sums between the day of leafout and the day of budset for each species. We calculated daily heat sums using the R package ``pollen" \citep{Nowosad2019} using a 10 $\degree$C base temperature with minimum and maximum daily temperature data from the weld hill weather station.
+
+All models were fit in the R package ``brms" \citep{Burkner2018} on 4 chains with a 4000 iteration warm-up and 1000 sampling iterations on each chain for a total of 4,000 sampling iterations across all chains. We evaluated model fit, with no divergent transitions, rhats less than 1.01 and high effective sample sizes. We performed all analyses in R version 4.1.2 \citep{R2021}.
 
 \section{Figures}
  \begin{figure}[h!]
     \centering
  \includegraphics[width=.8\textwidth]{..//analyses/figures/full_var_parts.jpeg}
-    \caption{Difference in leafout, leaf coloration and growing season length partitioned between species (a) populations (b) and years (c). Point represent the median effect size estimate, and bars the 50\% uncertainty intervals. The grey distribution depict the full uncertainty estimate around the estimate.}
+    \caption{Difference in leafout, leaf coloration and growing season length partitioned between species (a) populations (b) and years (c). Point represent the median effect size estimate, and bars the 90\% uncertainty intervals.}
     \label{fig:alta}
 \end{figure}
 
@@ -85,7 +103,7 @@ Species & functional group & n \\
 \begin{figure}[h!]
     \centering
  \includegraphics[width=.8\textwidth]{..//analyses/figures/fullgrowingseason_modplots.jpeg} 
-    \caption{The relationship between Start of Spring (calendar day of leafout) and growing season length (defined by leaf coloration) differs between the calendar growing season and the thermal growing season. Later leafout did not affect calendar growing season (a) but this pattern varied  across species in our study (b). Increasingly later leafout resulted in a longer thermal growing season (c) though this effect was stronger for species that typically leafout earlier in the season---panels in c) display in the typical order of leafout among species. The blue trend lines represent the mean effect of leafout timing on growing season length and black lines represent 1000 draws from the posterior distribution as a measure of uncertainty. Points in a), and c) represent the raw data.}
+    \caption{The relationship between Start of Spring (calendar day of leafout) and growing season length (defined by leaf coloration) differs between the calendar growing season and the thermal growing season. Later leafout did not affect calendar growing season (a) but this pattern varied  across species in our study (b). Increasingly later leafout resulted in a longer thermal growing season (c) though this effect was stronger for species that typically leafout earlier in the season---panels in c) display in the typical order of leafout among species. The trend lines represent the median effect of leafout timing on growing season length and shaded bars the 90\% uncertaintly interval. Points in a), and c) represent the raw data.}
     \label{fig:leafrel}
 \end{figure}
 
